# MoE-Homeostatico-with-RAS

./: .gitignore  README.md  plan actualizado.md  pyproject.toml  requirements_test.txt  test_output.txt
Contexto anterior/: compass_artifact_wf-5fb41b74-753a-46d7-9e4d-acf61c6980ac_text_markdown.md
Plan de investigación/: paso1_baseline_ricci_v2.md  paso2_multiespacio_ras_v2.md  paso3_benchmark_v2.md  paso4_verificacion_v2.md  plan_general_v2.md
data/: README.md
docs/: PENDIENTE_expertos_especializados.md
examples/: demo_phase1.py  demo_phase2.py  validate_adjustments.py
notebooks/: README.md
results/: README.md  last_run_summary.md
src/: __init__.py
src/benchmarking/: __init__.py  harness.py  reporter.py  scenarios.py
src/core/: __init__.py  backend.py  curvature.py  graph_utils.py  ricci_cleaning.py  routing.py
src/experiments/: __init__.py
src/geometry/: __init__.py  euclidean.py  hyperbolic.py  moe_gating.py
src/l_kn_core/: __init__.py  manager.py
src/ras_core/: __init__.py  manager.py
src/rsa_engine/: __init__.py  embeddings.py  population.py  selection.py  solver.py
src/verification/: __init__.py  rsi_logger.py
tests/: scenarios_calibration.json  test_benchmarking.py  test_graph_utils.py  test_l_kn_manager.py  test_phase1.py  test_phase2.py  test_ras_controller.py  test_rsa_engine.py  test_rsi_logger.py
